--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions 'prod'
+    productFlavors {
+        dev {
+            dimension = 'prod'
+        }
+        full {
+            dimension = 'prod'
+        }
+        trial {
+            dimension = 'prod'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation project(path: ':More')
+    fullImplementation project(path: ':Logic')
 }
